Streaming media le agregue
es para reproducir un video tal que cuando le das play se abre el video

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,10 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-<h2>LETROTAS_________</h2>
-  
+<ion-content class="ion-padding">
+<ion-button (click)="PlayVideo()">
+  Aca lo puedes presionar
+  <ion-icon slot="icon-only"></ion-icon>
+</ion-button>
+</ion-content>
 </ion-content>
