Streaming media le agregue 2
es para reproducir un video tal que cuando le das play se abre el video 2

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,5 +17,16 @@
   Aca lo puedes presionar
   <ion-icon slot="icon-only"></ion-icon>
 </ion-button>
+<ion-button (click)="PlayVideo2()">
+  Aca lo puedes presionar
+  <ion-icon slot="icon-only"></ion-icon>
+</ion-button>
+
 </ion-content>
+<ion-content class="has-header" padding="true">
+	<video controls class="video_content">
+	    <source src="video/movie.mp4" type='video/mp4' />
+	</video>
+</ion-content>
+
 </ion-content>
